# ml-starter-api

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  runner.py
config/: conf.json
ml_starter_api/: app.py  app_loader.py  config.py
ml_starter_api/database/: manager.py
ml_starter_api/ml/: loading.py  model_runner.py
ml_starter_api/models/: common.py  evaluation.py  predictions.py
ml_starter_api/routers/: evaluation.py  predictions.py
tests/: conftest.py  test_database_manager.py  test_ml.py
