[tool.poetry]
name = "ml_starter_api"
version = "0.1.0"
description = "Investigate SQLModel usage with FastAPI"
authors = ["Frederic Branchaud-Charron <frederic.branchaud.charron@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.0"
numpy = "^1.21.1"
transformers = "^4.9.1"
torch = "^1.9.0"
uvicorn = "^0.14.0"
structlog = "^21.1.0"
sqlmodel = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
flake8 = "^3.9.2"
black = "^21.7b0"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100